--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -14,8 +14,7 @@
         android:label="@string/app_name"
         tools:ignore="UnusedAttribute">
         <activity
-            android:name="com.bindereq.game.SpaceEnglishAndroid"
-            android:label="@string/app_name" 
+            android:name="com.bindereq.game.SpaceEnglish"
             android:screenOrientation="landscape"
             android:configChanges="keyboard|keyboardHidden|navigation|orientation|screenSize|screenLayout"
             android:exported="true">
